	added tests for autoconf Defines.
	* lib/liblputil.c: added (BEGIN|END)_C_DECLS macros.
	added tests for autoconf Defines.
	* lib/liblpxpak.c: added (BEGIN|END)_C_DECLS macros.
	added tests for autoconf Defines.
	* lib/: renamed to src/.
 	* COPYING: added.
	* Makefile.am: added.
	* configure.ac: added.
	* include/Makefile.am: added.
	* src/Makefile.am: added.

2009-02-05  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added new test-framework:
	* t/Makefile: updated to match new test framework.
	* t/test.sh: added.
	* t/lpxpak/Makefile: added.
	* t/lpatom/Makefile: added.
	* t/atom_test.c: moved to t/lpatom/atom_parse.test.c
	* t/atom_positive.txt: moved to t/lpatom/atom_positive.txt
	* t/xpak_test.c: moved to t/lpxpak/xpak_parse.test.c
	* t/xpak_test.tbz2: moved to t/lpxpak/xpak_parse.test.tbz2

2009-02-03  Lars Hartmann  <lars (at) chaotika (dot) org>

	Updated liblpatom to a Object based model:
	* lib/liblpatom.c (lpatom_parse): fixed memleak.
	(lpatom_parse): does now return an int.
	(lpatom_destroy): introduced object based model.
	* t/atom_test.c: modified to work with new, object based lpatom.

2009-02-02  Lars Hartmann  <lars (at) chaotika (dot) org>

	Updated liblpatom to a Object based model:
	* include/liblpatom.h (lpatom_t): added regex member which is a
	struct of several regex_t objects.
	* lib/liblpatom.c (lpatom_reinit): added.
	(lpatom_parse): introduced object based model.
	(lpatom_suffix_parse): introduced object based model.

	Updated Error Codes:
	* lib/liblpxpak.c (lpxpak_parse_fd): returns EBADFD instead of
	EINVAL if the fd is not opened for reading.

	Test updates:
	* t/Makefile (atom_test, xpak_test, test): simple test target added.
	* t/atom_test.c : does now also check if lpatom_cmp works as expected.

2009-02-01  Lars Hartmann  <lars (at) chaotika (dot) org>

	Updated Copyright statements:
	* COPYING: added.
	* doc/xpak.txt: added 2009.

2009-01-31  Lars Hartmann  <lars (at) chaotika (dot) org>
