@@ -1,8 +1,0 @@
-DX = doxygen
-DXPATH = doxygen
-
-devdoc:
-	${DX} ${DXPATH}/dev-doc
-
-apidoc:
-	${DX} ${DXPATH}/api-doc
